<resources>
    <string name="app_name">K22411CASampleProject</string>
    <string name="title_login_username_hint">Enter your username</string>
    <string name="title_login_password">Password:</string>
    <string name="title_login_username">User name:</string>
    <string name="title_login_save_infor">Save login infor</string>
    <string name="title_login_button_login">Login</string>
    <string name="title_main_employee">Employee</string>
    <string name="title_main_customer">Customer</string>
    <string name="title_main_categogy">Dog</string>
    <string name="title_main_cat">Cat</string>
    <string name="title_main_girl">Girl</string>
    <string name="title_main_boy">Boy</string>
    <string name="title_main_woman">Woman</string>
    <string name="title_main_man">Man</string>
    <string name="title_main_admin">Admin</string>
    <string name="title_main_manager">Manager</string>
    <string name="title_main_trainer">Trainer</string>
    <string name="title_main_director">Director</string>
    <string name="title_employee_healthcare">Healthcare</string>
    <string name="title_employee_salary">Salary</string>
    <string name="title_activity_employee_healthcare">Employee Health Care</string>
    <string name="title_height">Height:</string>
    <string name="title_weight">Weight:</string>
    <string name="title_calculate">Calculate</string>
    <string name="title_clear">Clear</string>
    <string name="title_close">close</string>
    <string name="title_main_category">Category</string>
    <string name="title_main_product">Product</string>
    <string name="title_advanced_products">Advanced Products</string>
    <string name="title_create_new_customer">New customer</string>
    <string name="title_broadcast_advertising">Broadcast advertising</string>
    <string name="title_help">Help</string>
    <string name="title_customer_detail">Customer Detail</string>
    <string name="title_customer_id">Customer ID:</string>
    <string name="title_customer_name">Customer Name:</string>
    <string name="title_customer_email">Customer Email:</string>
    <string name="title_customer_phone">Customer Phone:</string>
    <string name="title_new">New</string>
    <string name="title_save">Save</string>
    <string name="title_remove">Remove</string>
    <string name="title_create_new_product">New Product</string>
    <string name="title_product_detail">Product Detail</string>
    <string name="title_product_id">Product ID:</string>
    <string name="title_product_name">Product Name:</string>
    <string name="title_product_quantity">Product Quantity:</string>
    <string name="title_product_price">Product Price:</string>
    <string name="title_product_cateid">Category ID</string>
    <string name="title_product_imageid">Image ID:</string>
</resources>