<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_new_customer"
        android:title="@string/title_create_new_customer"
        android:enabled="true"
        android:visible="true"
        app:showAsAction="always">
        </item>
    <item
        android:id="@+id/menu_broadcast_advertising"
        android:title="@string/title_broadcast_advertising"
        android:enabled="true"
        android:visible="true"
        app:showAsAction="always">
    </item>
    <item
        android:id="@+id/menu_help"
        android:title="@string/title_help"
        android:enabled="true"
        android:visible="true"
        app:showAsAction="always">
    </item>
</menu>